--- a/LeagueService/LeagueForm/Properties/Resources.resx
+++ b/LeagueService/LeagueForm/Properties/Resources.resx
@@ -133,4 +133,10 @@
   <data name="firstGradient" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\firstGradient.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="leagueFont" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\leagueFont.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ufonts_com_friz_quadrata_bt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ufonts.com_friz-quadrata-bt.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
